use etex to work with older latex

--- a/latex/headerMIslides.tex
+++ b/latex/headerMIslides.tex
@@ -1,5 +1,6 @@
 \documentclass[pdfetex,ignorenonframetext]{beamer}
 \usetheme{TUBerlin}
+\usepackage{etex}
 \usepackage{latexsym,listings,graphicx}
 \usepackage[latin1]{inputenc}
 \usepackage[T1]{fontenc}
