--- a/latex/minotes.cls
+++ b/latex/minotes.cls
@@ -3,6 +3,7 @@
 
 % packages and classes, scrartcle is an extended article 
 \LoadClass[a4paper]{scrartcl}
+\usepackage{etex}
 \RequirePackage{scrlayer-scrpage, times, amsmath, amssymb, bm}
 \RequirePackage{etoolbox, comment} % not ifthen, xstring, 
 \RequirePackage[latin9]{inputenc}
