no formatting inside caption

--- a/notes/06_fastica/1_pcaica.tex
+++ b/notes/06_fastica/1_pcaica.tex
@@ -93,7 +93,7 @@ Whitening decorrelates the variables and normalizes the variances to 1.
 \begin{figure}[ht]
 \label{fig:sphering}
 \includegraphics[width=12cm]{img/cov.png}
-\caption{A visual interpretation of whitening (\emph{sphering})}
+\caption{A visual interpretation of whitening}
 \end{figure}
 
 \end{frame}
