no formatting of section names

--- a/notes/05_infomax/1_infomax.tex
+++ b/notes/05_infomax/1_infomax.tex
@@ -242,7 +242,7 @@ h(Y|X) = -\int_{-\infty}^{\infty} \int_{-\infty}^{\infty} p_{X,Y}(x,y)\,\log  p_
 \label{eq:diffentropycondcontinuous}
 \end{equation}
 
-\subsection{Relative Entropy or \emph{Kullback-Leibler (KL) divergence}}
+\subsection{Relative Entropy or Kullback-Leibler (KL) divergence}
 
 A measure for how a much one probability distribution differs from a reference distribution. 
 It does not qualify as a distance metric, as it is not symmetric, but it still satisfies other useful metric properties (e.g. non-negative).
