--- a/notes/06_fastica/1_pcaica.tex
+++ b/notes/06_fastica/1_pcaica.tex
@@ -97,7 +97,7 @@ Whitening decorrelates the variables and normalizes the variances to 1.
 \end{figure}
 
 \end{frame}
-\newpage
+\clearpage
 \section{Ambiguities in ICA and limitations}
 \begin{frame}
 
@@ -832,7 +832,7 @@ Kurtosis, just like other higher-order cumulants are sensitive to outliers, in t
  will register a much higher kurtosis value. This will be addressed later by FastICA.
 }
 
-\newpage
+\clearpage
 
 \subsection{kurtosis-based ICA}
 
@@ -1212,7 +1212,7 @@ The approximation is modified using
 
 \end{frame}
 
-\newpage
+\clearpage
 \begin{frame}{Common contrast functions}
  
  \notesonly{
