remove formatting from caption

--- a/notes/10_lle/1_embedding.tex
+++ b/notes/10_lle/1_embedding.tex
@@ -28,7 +28,7 @@ provides an example of this.
          \caption{projection onto the first 2 PCs}
          \label{fig:spiral_pca}
      \end{subfigure}
-     \caption{Dimensionality reduction of ``spiral data''. Points are colored according to their index in the dataset.}
+     \caption{Dimensionality reduction of the spiral data. Points are colored according to their index in the dataset.}
 	 \label{fig:spiral}
 \end{figure}
 
