--- a/notes/01_pca/tutorial.tex
+++ b/notes/01_pca/tutorial.tex
@@ -62,7 +62,19 @@
 \newpage
 
 \mode<all>
+\input{./0_dim}
+\mode*
+
+\clearpage
+
+\mode<all>
 \input{./1_pca}
+\mode*
+
+%\clearpage
+
+\mode<all>
+\input{./2_apply-pca}
 \mode*
 
 \clearpage
