--- a/notes/01_pca/tutorial.tex
+++ b/notes/01_pca/tutorial.tex
@@ -1,5 +1,6 @@
 \usepackage[authoryear,round]{natbib}
 \usepackage{multirow}
+\usetikzlibrary{decorations.pathmorphing}
 
 \newcommand{\sheetnum}{%
 	01
