alias and pca cont'd

--- a/latex/headerMIslides.tex
+++ b/latex/headerMIslides.tex
@@ -106,3 +106,6 @@
 \newcommand{\notesonly}[1]{}
 
 \newcommand{\inparaenum}{\enumerate}
+
+% vertical space for slides only
+\newcommand{\svspace}[1]{\slidesonly{\vspace{#1}}}
