--- a/notes/00_lagrange/tutorial.tex
+++ b/notes/00_lagrange/tutorial.tex
@@ -6,10 +6,10 @@
 }
 %\setcounter{section}{\sheetnum-3}
 \newcommand{\tutorialtitle}{%
-    Method of Lagrange Multipliers
+    Introduction \& Method of Lagrange Multipliers
 }
 \newcommand{\tutorialtitleshort}{%
-	Lagrange
+	Intro \& Lagrange
 }
 % for slides
 \subtitle{\sheetnum \tutorialtitle}
@@ -60,6 +60,11 @@
 \end{frame}
 
 \newpage
+
+\mode<all>
+\input{./0_intro}
+\mode*
+
 
 \mode<all>
 \input{./1_lagrange}
