--- a/notes/00_lagrange/1_lagrange.tex
+++ b/notes/00_lagrange/1_lagrange.tex
@@ -2,7 +2,13 @@
 
 \definecolor{darkgreen}{rgb}{0,0.6,0}
 
-\begin{frame}\frametitle{\secname} 
+\begin{frame}
+	\slidesonly{
+	\begin{center}\Large
+	\secname
+	\end{center}
+	\pause
+	}
     \begin{center}
     \slidesonly{\huge}
 	Don't panic!
