--- a/notes/00_lagrange/1_lagrange.tex
+++ b/notes/00_lagrange/1_lagrange.tex
@@ -170,6 +170,8 @@ We refer to $\lambda$ as the \emph{multiplier} for the constraint $c$.
 }
 \end{frame}
 
+\newpage
+
 \subsection{Multiple constraints}
 
 \begin{frame}
